--- a/crm_app/templates/crm/Leads/lead_load.html
+++ b/crm_app/templates/crm/Leads/lead_load.html
@@ -147,7 +147,7 @@
                         <div class="tab-pane active " id="lead-all" role="tabpanel">
                           
                            <div class="table-responsive table-card mb-1">
-                              <table class="table table-bordered border-secondary table-nowrap align-middle" id="orderTable">
+                              <table class="table table-nowrap align-middle" id="orderTable">
                                  <thead class="text-muted table-light">
                                     <tr class="text-uppercase">
                                        {% comment %} <th scope="col" style="width: 25px;">
