--- a/crm_app/templates/crm/Masters/Group/group_list.html
+++ b/crm_app/templates/crm/Masters/Group/group_list.html
@@ -14,8 +14,8 @@
       </td>
       
      
-      <td>{{group.create_by.first_name}} {{group.create_by.last_name}}</td>
-      <td>{{group.created}}</td>
+      <td>{{group.create_by}}</td>
+      
       <td>{{group.updated_on}}</td>
      
       <td>
