--- a/crm_app/templates/crm/Masters/VisaCategory/visacategory_list.html
+++ b/crm_app/templates/crm/Masters/VisaCategory/visacategory_list.html
@@ -17,8 +17,8 @@
       </td>
       <td class="phone">{{category.subcategory}}</td>
       
-      <td class="date">{{category.lastupdated_by.first_name}} {{category.lastupdated_by.last_name}}</td>
-      <td>{{category.created}}</td>
+      <td class="date">{{category.lastupdated_by}} {{category.lastupdated_by.last_name}}</td>
+      
       <td>{{category.last_updated_on}}</td>
       <td>
          <div class="d-flex gap-2">
