--- a/crm_app/templates/crm/Masters/VisaCountry/visacountry_load.html
+++ b/crm_app/templates/crm/Masters/VisaCountry/visacountry_load.html
@@ -22,7 +22,7 @@
          <div class="col-lg-12">
             <div class="card">
                <div class="card-header">
-                  <h4 class="card-title mb-0">Add, Edit & Remove</h4>
+                  <h4 class="card-title mb-0">VISA COUNTRY</h4>
                </div>
                <!-- end card header -->
                <div class="card-body">
