--- a/crm_app/templates/crm/Masters/VisaSubCategory/visasubcategory_list.html
+++ b/crm_app/templates/crm/Masters/VisaSubCategory/visasubcategory_list.html
@@ -13,8 +13,8 @@
       <td>{{visasubcategory.totalAmount}}</td>
       
      
-      <td>{{visasubcategory.last_updated_by.first_name}} {{visasubcategory.last_updated_by.last_name}}</td>
-      <td>{{visasubcategory.created}}</td>
+      <td>{{visasubcategory.lastupdated_by}}</td>
+     
       <td>{{visasubcategory.last_updated_on}}</td>
       <td>
          <div class="d-flex gap-2">
