--- a/crm_app/templates/crm/base/navbar.html
+++ b/crm_app/templates/crm/base/navbar.html
@@ -71,7 +71,7 @@
                                  </a>
                               </li>
                               <li class="nav-item">
-                                 <a href="{% url "employee_load" %}" class="nav-link"
+                                 <a href="{% url "lead_load" %}" class="nav-link"
                                     data-key="t-cover">All Leads
                                  </a>
                               </li>
