--- a/crm_app/templates/crm/InternalManagement/Employee/VisaTeam/visateam_load.html
+++ b/crm_app/templates/crm/InternalManagement/Employee/VisaTeam/visateam_load.html
@@ -24,7 +24,7 @@
          <div class="col-lg-12">
             <div class="card">
                <div class="card-header">
-                  <h4 class="card-title mb-0">Add, Edit & Remove</h4>
+                  <h4 class="card-title mb-0">VisaTeam</h4>
                </div>
                <!-- end card header -->
                <div class="card-body">
@@ -45,7 +45,7 @@
                              
                               <div class="search-box ms-2">
                                  <input class="form-control" type="search" 
-                                    name="search" placeholder="Begin Typing To Search Users..." 
+                                    name="search" placeholder="Search" 
                                     hx-get="{% url "visa_team_list" %}" 
                                     hx-trigger="input changed delay:500ms, search" 
                                     hx-target="#search-results" 
