--- a/crm_app/templates/crm/InternalManagement/Employee/employee_load.html
+++ b/crm_app/templates/crm/InternalManagement/Employee/employee_load.html
@@ -9,10 +9,10 @@
          <div class="col-12">
             <div
                class="page-title-box d-sm-flex align-items-center justify-content-between bg-transparent">
-               <h4 class="mb-sm-0">Visa Country</h4>
+               <h4 class="mb-sm-0">Employee Management</h4>
                <div class="page-title-right">
                   <ol class="breadcrumb m-0">
-                     <li class="breadcrumb-item"><a href="javascript: void(0);">Visa Country</a></li>
+                     <li class="breadcrumb-item"><a href="javascript: void(0);">Employee</a></li>
                      <li class="breadcrumb-item active">List</li>
                   </ol>
                </div>
@@ -24,7 +24,7 @@
          <div class="col-lg-12">
             <div class="card">
                <div class="card-header">
-                  <h4 class="card-title mb-0">Add, Edit & Remove</h4>
+                  <h4 class="card-title mb-0">EMPLOYEE LIST</h4>
                </div>
                <!-- end card header -->
                <div class="card-body">
@@ -45,7 +45,7 @@
                              
                               <div class="search-box ms-2">
                                  <input class="form-control" type="search" 
-                                    name="search" placeholder="Begin Typing To Search Users..." 
+                                    name="search" placeholder="Search Users" 
                                     hx-get="{% url "employee_list" %}" 
                                     hx-trigger="input changed delay:500ms, search" 
                                     hx-target="#search-results" 
