--- a/crm_app/templates/crm/Leads/all_lead.html
+++ b/crm_app/templates/crm/Leads/all_lead.html
@@ -232,7 +232,7 @@
              </a>
           </li>
           <li class="list-inline-item edit" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-placement="top" title="Edit">
-             <a href="#showModal" data-bs-toggle="modal" class="text-primary d-inline-block edit-item-btn">
+             <a href="{% url "personal_info" i.id %}"  class="text-primary d-inline-block edit-item-btn">
              <i class="ri-pencil-fill fs-16"></i>
              </a>
           </li>
