--- a/crm_app/templates/crm/Leads/lead_load.html
+++ b/crm_app/templates/crm/Leads/lead_load.html
@@ -9,11 +9,11 @@
          <div class="col-12">
             <div
                class="page-title-box d-sm-flex align-items-center justify-content-between bg-transparent">
-               <h4 class="mb-sm-0">Products</h4>
+               <h4 class="mb-sm-0">View All Lead</h4>
                <div class="page-title-right">
                   <ol class="breadcrumb m-0">
-                     <li class="breadcrumb-item"><a href="javascript: void(0);">Ecommerce</a></li>
-                     <li class="breadcrumb-item active">Products</li>
+                     <li class="breadcrumb-item"><a href="javascript: void(0);">View All Lead</a></li>
+                     <li class="breadcrumb-item active">List</li>
                   </ol>
                </div>
             </div>
@@ -29,16 +29,16 @@
                      <div class="row g-4">
                         <div class="col-sm-auto">
                            <div>
-                              <a href="apps-ecommerce-add-product.html" class="btn btn-primary"
+                              <a href="{% url "add_lead" %}" class="btn btn-primary"
                                  id="addproduct-btn"><i
-                                 class="ri-add-line align-bottom me-1"></i> Add Product</a>
+                                 class="ri-add-line align-bottom me-1"></i>Lead</a>
                            </div>
                         </div>
                         <div class="col-sm">
                            <div class="d-flex justify-content-sm-end">
                               <div class="search-box ms-2">
                                  <input type="text" class="form-control" id="searchProductList"
-                                    placeholder="Search Products...">
+                                    placeholder="Search">
                                  <i class="ri-search-line search-icon"></i>
                               </div>
                            </div>
