--- a/crm_app/templates/crm/Masters/Branch/branch_list.html
+++ b/crm_app/templates/crm/Masters/Branch/branch_list.html
@@ -10,8 +10,8 @@
       
       
      
-      <td>{{branch.last_updated_by.first_name}} {{branch.last_updated_by.last_name}}</td>
-      <td>{{branch.created}}</td>
+      <td>{{branch.last_updated_by}}</td>
+      
       <td>{{branch.last_updated_on}}</td>
       <td>
          <div class="d-flex gap-2">
@@ -25,7 +25,7 @@
                {% comment %} <button class="btn btn-sm btn-danger remove-item-btn" data-bs-toggle="modal" data-bs-target="#deleteRecordModal">Remove</button> {% endcomment %}
               <button class="btn btn-sm btn-danger remove-item-btn" 
            hx-delete="{% url 'delete_branch' pk=branch.pk %}" 
-           hx-confirm="Are you sure you want to delete this Visa Subcategory ?"
+           hx-confirm="Dou you want to delete ?"
            hx-target="#branch-{{ branch.pk }}"
            hx-swap="outerHTML"
            hx-headers='{"X-CSRFToken":"{{ csrf_token }}"}'>
