--- a/crm_app/templates/crm/Masters/CaseCategoryDocuments/case_category_documents_list.html
+++ b/crm_app/templates/crm/Masters/CaseCategoryDocuments/case_category_documents_list.html
@@ -11,7 +11,7 @@
       
      
       <td>{{casecategorydoucment.last_updated_by.first_name}} {{casecategorydoucment.last_updated_by.last_name}}</td>
-      <td>{{casecategorydoucment.created}}</td>
+      
       <td>{{casecategorydoucment.last_updated_on}}</td>
       <td>
          <div class="d-flex gap-2">
@@ -26,7 +26,7 @@
                {% comment %} <button class="btn btn-sm btn-danger remove-item-btn" data-bs-toggle="modal" data-bs-target="#deleteRecordModal">Remove</button> {% endcomment %}
               <button class="btn btn-sm btn-danger remove-item-btn" 
                      hx-delete="{% url 'delete_case_category_document' pk=casecategorydoucment.pk %}" 
-                     hx-confirm="Are you sure you want to delete this case category ?"
+                     hx-confirm="Do you want to delete this  ?"
                      hx-target="#casecategorydoucment-{{ casecategorydoucment.pk }}"
                      hx-swap="outerHTML"
                      hx-headers='{"X-CSRFToken":"{{ csrf_token }}"}'>
