--- a/crm_app/templates/crm/Masters/DocumentCategory/documentcategory_list.html
+++ b/crm_app/templates/crm/Masters/DocumentCategory/documentcategory_list.html
@@ -7,10 +7,9 @@
       <td class="phone">{{forloop.counter}}</td>
      
       <td>{{doucmentcategory.Document_category}}</td>
-      <td>{{doucmentcategory.lastupdated_by.first_name}} {{doucmentcategory.lastupdated_by.last_name}}</td>
+      <td>{{doucmentcategory.lastupdated_by}} {{doucmentcategory.lastupdated_by.last_name}}</td>
       
      
-      <td>{{doucmentcategory.created}}</td>
       <td>{{doucmentcategory.last_updated_on}}</td>
       <td>
          <div class="d-flex gap-2">
@@ -22,7 +21,7 @@
                {% comment %} <button class="btn btn-sm btn-danger remove-item-btn" data-bs-toggle="modal" data-bs-target="#deleteRecordModal">Remove</button> {% endcomment %}
              <button class="btn btn-sm btn-danger remove-item-btn" 
            hx-delete="{% url 'delete_documentcategory' pk=doucmentcategory.pk %}" 
-           hx-confirm="Are you sure you want to delete this category ?"
+           hx-confirm="Do you want to delete ?"
            hx-target="#doucmentcategory-{{ doucmentcategory.pk }}"
            hx-swap="outerHTML"
            hx-headers='{"X-CSRFToken":"{{ csrf_token }}"}'>
