--- a/crm_app/templates/crm/Masters/Documents/documents_list.html
+++ b/crm_app/templates/crm/Masters/Documents/documents_list.html
@@ -10,8 +10,8 @@
       <td>{{doucment.document_category.Document_category}}</td>
       
      
-      <td>{{doucment.lastupdated_by.first_name}} {{doucment.lastupdated_by.last_name}}</td>
-      <td>{{doucment.created}}</td>
+      <td>{{doucment.lastupdated_by}}</td>
+     
       <td>{{doucment.last_updated_on}}</td>
       <td>
          <div class="d-flex gap-2">
@@ -25,7 +25,7 @@
                {% comment %} <button class="btn btn-sm btn-danger remove-item-btn" data-bs-toggle="modal" data-bs-target="#deleteRecordModal">Remove</button> {% endcomment %}
              <button class="btn btn-sm btn-danger remove-item-btn" 
            hx-delete="{% url 'delete_document' pk=doucment.pk %}" 
-           hx-confirm="Are you sure you want to delete this category ?"
+           hx-confirm="Do you want to delete ?"
            hx-target="#doucment-{{ doucment.pk }}"
            hx-swap="outerHTML"
            hx-headers='{"X-CSRFToken":"{{ csrf_token }}"}'>
