--- a/crm_app/templates/crm/Masters/VisaCountry/visacountry_list.html
+++ b/crm_app/templates/crm/Masters/VisaCountry/visacountry_list.html
@@ -3,18 +3,14 @@
   {% load static %}
   {% for country in page_obj %}
   <tr id="country-{{ country.pk }}">
-      {% comment %} <th scope="row ">
-         <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="chk_child" value="option1" id="admin-{{admin.superadmin.pk }}">
-         </div>
-      </th> {% endcomment %}
+      
       <td class="phone">{{forloop.counter}}</td>
      
       <td>
         {{country.country}}
-        {% comment %} <a href="#javascript: void(0);" class="text-body fw-medium">{{admin.user.first_name}} {{admin.user.last_name}}</a> {% endcomment %}
+        
       </td>
-      <td class="phone">{{country.lastupdated_by.first_name}} {{country.lastupdated_by.last_name}}</td>
+      <td class="phone">{{country.lastupdated_by}}</td>
       <td>{{country.created}}</td>
       
       <td class="date">{{country.last_updated_on}}</td>
@@ -27,7 +23,7 @@
                {% comment %} <button class="btn btn-sm btn-danger remove-item-btn" data-bs-toggle="modal" data-bs-target="#deleteRecordModal">Remove</button> {% endcomment %}
                <button class="btn btn-sm btn-danger remove-item-btn" 
            hx-delete="{% url 'delete_visacountry' pk=country.pk %}" 
-           hx-confirm="Are you sure you want to delete this admin?"
+           hx-confirm="Do you want to delete ?"
            hx-target="#country-{{ country.pk }}"
            hx-swap="outerHTML"
            hx-headers='{"X-CSRFToken":"{{ csrf_token }}"}'>
