--- a/crm_app/templates/crm/Masters/VisaSubCategory/visasubcategory_load.html
+++ b/crm_app/templates/crm/Masters/VisaSubCategory/visasubcategory_load.html
@@ -7,10 +7,10 @@
          <div class="col-12">
             <div
                class="page-title-box d-sm-flex align-items-center justify-content-between bg-transparent">
-               <h4 class="mb-sm-0">Visa Country</h4>
+               <h4 class="mb-sm-0">Pricing</h4>
                <div class="page-title-right">
                   <ol class="breadcrumb m-0">
-                     <li class="breadcrumb-item"><a href="javascript: void(0);">Visa Country</a></li>
+                     <li class="breadcrumb-item"><a href="javascript: void(0);">Pricing</a></li>
                      <li class="breadcrumb-item active">List</li>
                   </ol>
                </div>
@@ -22,7 +22,7 @@
          <div class="col-lg-12">
             <div class="card">
                <div class="card-header">
-                  <h4 class="card-title mb-0">Add, Edit & Remove</h4>
+                  <h4 class="card-title mb-0">Pricing</h4>
                </div>
                <!-- end card header -->
                <div class="card-body">
@@ -75,7 +75,7 @@
                                  <th>Sgst(%)</th>
                                  <th>Total Amount</th>
                                  <th>Last Updated By</th>
-                                 <th>Created At</th>
+                                
                                  <th>Last Updated On</th>
                                  <th>Action</th>
                               </tr>
