--- a/crm_app/templates/crm/SuperAdmin/admin_list.html
+++ b/crm_app/templates/crm/SuperAdmin/admin_list.html
@@ -5,7 +5,7 @@
   <tr id="admin-{{ admin.pk }}">
       {% comment %} <th scope="row ">
          <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="chk_child" value="option1" id="admin-{{admin.superadmin.pk }}">
+            <input class="form-check-input" type="checkbox" name="chk_child" value="option1" id="admin-{{admin.users.pk }}">
          </div>
       </th> {% endcomment %}
       <td class="phone">{{forloop.counter}}</td>
@@ -17,7 +17,7 @@
              {% comment %} <img src="assets/images/users/avatar-1.jpg" alt="" class="avatar-xs rounded-circle"> {% endcomment %}
              <img src="{{admin.profile_pic.url}}" alt="" class="avatar-xs rounded-circle me-2">
          </div>
-         <div class="flex-grow-1">{{admin.superadmin.first_name}} {{admin.superadmin.last_name}}</div>
+         <div class="flex-grow-1">{{admin.users.first_name}} {{admin.users.last_name}}</div>
      </div>
 
 
@@ -31,23 +31,23 @@
              {% comment %} <img src="{{admin.profile_pic.url}}" alt="" class="avatar-xs rounded-circle me-2"> {% endcomment %}
              <i class="bx bx-user-circle text-warning fs-2"></i>
          </div>
-         <div class="flex-grow-1">{{admin.superadmin.first_name}} {{admin.superadmin.last_name}}</div>
+         <div class="flex-grow-1">{{admin.users.first_name}} {{admin.users.last_name}}</div>
      </div>
         {% comment %} <i class="bx bx-user-circle text-warning "></i> {% endcomment %}
         {% endif %}
         {% comment %} <a href="#javascript: void(0);" class="text-body fw-medium">{{admin.user.first_name}} {{admin.user.last_name}}</a> {% endcomment %}
       </td>
-      <td class="phone">{{admin.superadmin.email}}</td>
-      <td class="date">{{admin.mobile}}</td>
+      <td class="phone">{{admin.users.email}}</td>
+      <td class="date">{{admin.contact_no}}</td>
       <td>
          <div class="d-flex gap-2">
             <div class="edit">
-               <button class="btn btn-sm btn-primary edit-item-btn" hx-get="{% url 'edit_admin' pk=admin.superadmin.pk %}" hx-target="#dialog">Edit</button>
+               <button class="btn btn-sm btn-primary edit-item-btn" hx-get="{% url 'edit_admin' pk=admin.users.pk %}" hx-target="#dialog">Edit</button>
             </div>
             <div class="remove">
                {% comment %} <button class="btn btn-sm btn-danger remove-item-btn" data-bs-toggle="modal" data-bs-target="#deleteRecordModal">Remove</button> {% endcomment %}
                <button class="btn btn-sm btn-danger remove-item-btn" 
-           hx-delete="{% url 'delete_admin' pk=admin.superadmin.pk %}" 
+           hx-delete="{% url 'delete_admin' pk=admin.users.pk %}" 
            hx-confirm="Are you sure you want to delete this admin?"
            hx-target="#admin-{{ admin.pk }}"
            hx-swap="outerHTML"
