--- a/crm_app/templates/crm/base/multistep.html
+++ b/crm_app/templates/crm/base/multistep.html
@@ -3,7 +3,7 @@
  
     <ul class="nav nav-pills custom-nav nav-justified" role="tablist">
         <li class="nav-item" role="presentation">
-            <button class="nav-link {% if request.path == '/Add/Lead/' %}active{% endif %} "  type="button">Personal Info</button>
+            <a href="#"><button class="nav-link {% if request.path == '/Add/Lead/' %}active{% endif %} "  type="button">Personal Info</button></a>
         </li>
         <li class="nav-item" role="presentation">
            
