--- a/crm_app/templates/crm/Leads/enquiry/documents_details.html
+++ b/crm_app/templates/crm/Leads/enquiry/documents_details.html
@@ -4,7 +4,7 @@
 <div class="page-content">
    <div class="container-fluid">
       {% include "crm/components/enquiry_Section.html" %}
-      <div class="col-xxl-6 mb-5">
+      <div class="mb-5">
          <div class="d-flex profile-wrapper">
             <!-- Nav tabs -->
             <ul class="nav nav-pills animation-nav profile-nav gap-2 gap-lg-3 flex-grow-1">
