--- a/crm_app/templates/crm/Leads/enrolled_lead.html
+++ b/crm_app/templates/crm/Leads/enrolled_lead.html
@@ -1,3 +1,4 @@
+{% for i in page %}
 <tr>
     <th scope="row">
        <div class="form-check">
@@ -31,4 +32,5 @@
           </li>
        </ul>
     </td>
- </tr>
+</tr>
+{% endfor %}
