--- a/crm_app/templates/crm/Leads/all_lead.html
+++ b/crm_app/templates/crm/Leads/all_lead.html
@@ -250,3 +250,52 @@
 
 {% endfor %}
 
+
+<div class="d-flex justify-content-end">
+   <div class="pagination-wrap hstack gap-2" style="width: 2px;">
+      
+      {% if page_obj.has_previous %}
+      {% comment %} <a class="page-item pagination-prev" href="?page=1{% if search_query %}&search={{ search_query }}{% endif %}">First</a> {% endcomment %}
+      <a class="page-item pagination-prev" hx-get="{% url 'all_lead' %}?page=1{% if search_query %}&search={{ search_query }}{% endif %}" hx-target="#search-results">
+        First
+     </a>
+
+      <a class="page-item pagination-prev" hx-get="{% url 'all_lead' %}?page={{ page_obj.previous_page_number }}&search={{ search_query }}" hx-target="#search-results">
+         Previous
+      </a>
+      {% endif %}
+
+      <!-- Numbered Page Links -->
+      <ul class="pagination listjs-pagination mb-0">
+          {% for num in page_obj.paginator.page_range|slice:":3" %}
+              {% if page_obj.number == num %}
+                  <li class="page-item active">
+                      <a class="page-link" href="javascript:void(0);">{{ num }}</a>
+                  </li> <!-- Current page -->
+               {% else %}
+               <li class="page-item">
+                  <a class="page-link" hx-get="{% url 'all_lead' %}?page={{ num }}&search={{ search_query }}" hx-target="#search-results">{{ num }}</a>
+              </li>
+              {% endif %}
+
+             
+          {% endfor %}
+          {% if page_obj.paginator.num_pages > 3 %}
+          <li class="page-item"><span class="page-link">...</span></li>
+          <li class="page-item {% if page_obj.number == page_obj.paginator.num_pages %}active{% endif %}">
+            <a class="page-link" hx-get="{% url 'all_lead' %}?page={{ page_obj.paginator.num_pages }}&search={{ search_query }}" hx-target="#search-results">{{ page_obj.paginator.num_pages }}</a>
+          </li>
+        
+          {% endif %}
+      </ul>
+
+      <!-- Next Page Button -->
+      {% if page_obj.has_next %}
+      <a class="page-item pagination-next" hx-get="{% url 'all_lead' %}?page={{ page_obj.next_page_number }}&search={{ search_query }}" hx-target="#search-results">
+         Next
+      </a>
+      {% endif %}
+   </div>
+</div>
+
+
