--- a/crm_app/templates/crm/Leads/lead_load.html
+++ b/crm_app/templates/crm/Leads/lead_load.html
@@ -34,7 +34,7 @@
                                  class="ri-add-line align-bottom me-1"></i>Lead</a>
                            </div>
                         </div>
-                        <div class="col-sm">
+                        {% comment %} <div class="col-sm">
                            <div class="d-flex justify-content-sm-end">
                               <div class="search-box ms-2">
                                  <input type="text" class="form-control" id="searchProductList"
@@ -42,7 +42,7 @@
                                  <i class="ri-search-line search-icon"></i>
                               </div>
                            </div>
-                        </div>
+                        </div> {% endcomment %}
                      </div>
                   </div>
                   <div class="card-header">
@@ -145,8 +145,27 @@
                   <div class="card-body">
                      <div class="tab-content">
                         <div class="tab-pane active " id="lead-all" role="tabpanel">
+ 
+                           <div class="row mb-3">
+                              <!-- Left side - Filter form -->
+                            
                           
-                           <div class="table-responsive table-card mb-1">
+                              <!-- Right side - Search box -->
+                              <div class="col-sm-6 d-flex justify-content-end">
+                                  <div class="search-box ms-2">
+                                      <input class="form-control" type="search" 
+                                          name="search" placeholder="Begin Typing To Search Users..." 
+                                          hx-get="{% url 'all_lead' %}" 
+                                          hx-trigger="input changed delay:500ms, search" 
+                                          hx-target="#search-results" 
+                                          hx-indicator=".htmx-indicator">
+                                      <i class="ri-search-line search-icon"></i>
+                                  </div>
+                              </div>
+                          </div>
+                          
+                          
+                           <div class="table-responsive table-card mb-1 mt-2">
                               <table class="table table-nowrap align-middle" id="orderTable">
                                  <thead class="text-muted table-light">
                                     <tr class="text-uppercase">
@@ -206,17 +225,7 @@
                                  </div>
                               </div>
                            </div>
-                           <div class="d-flex justify-content-end">
-                              <div class="pagination-wrap hstack gap-2">
-                                 <a class="page-item pagination-prev disabled" href="#">
-                                 Previous
-                                 </a>
-                                 <ul class="pagination listjs-pagination mb-0"></ul>
-                                 <a class="page-item pagination-next" href="#">
-                                 Next
-                                 </a>
-                              </div>
-                           </div>
+                         
                         </div>
 
 
