--- a/crm_app/templates/crm/Leads/enquiry/documents_details.html
+++ b/crm_app/templates/crm/Leads/enquiry/documents_details.html
@@ -9,7 +9,7 @@
             <!-- Nav tabs -->
             <ul class="nav nav-pills animation-nav profile-nav gap-2 gap-lg-3 flex-grow-1">
                 <li class="nav-item">
-                    <a class="nav-link fs-14 active" href="#">
+                    <a class="nav-link fs-14" href="{% url "personal_info" enq.id %}">
                         <i class="ri-airplay-fill d-inline-block d-md-none"></i> <span class="d-none d-md-inline-block">Personal Info</span>
                     </a>
                 </li>
@@ -24,7 +24,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link fs-14" href="#">
+                    <a class="nav-link fs-14 active" href="#">
                         <i class="ri-folder-4-line d-inline-block d-md-none"></i> <span class="d-none d-md-inline-block">Documents</span>
                     </a>
                 </li>
